Fix padding on mobile

--- a/src/components/features/ProductDetails/ProductDetails.module.scss
+++ b/src/components/features/ProductDetails/ProductDetails.module.scss
@@ -1,8 +1,13 @@
 @import '../../../styles/settings.scss';
 
 .root {
-  padding: $base-size 0;
+  padding: $base-size/2 0;
   height: 100%;
+
+  .textParagraph {
+    padding-left: $base-size/2;
+    padding-right: $base-size/2;
+  }
 }
 
 @media (min-width: 960px) {
